grafana/grafana-full-install.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: ingress-nginx
  labels:
    app: grafana-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-server
  template:
    metadata:
      labels:
        app: grafana-server
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: ingress-nginx
  labels:
    app: grafana-server
spec:
  selector:
    app: grafana-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30322
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: ingress-nginx
  labels:
    app: grafana-server
spec:
  selector:
    app: grafana-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30322
  type: NodePort
