grafana/grafana-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: ingress-nginx
  labels:
    app: grafana-server
spec:
  selector:
    app: grafana-server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30322
  type: NodePort
