grafana/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-interview.grafana.local
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
